# AlgRow

./: .gitignore  README.md
lab2/: eratostenes.py  run.sh
lab3/: membrane.py  run.sh
lab3/rust/: Cargo.toml
lab3/rust/src/: main.rs
lab5/: julia.py  run.sh
lab6/: run.sh  salesman.py
stars/: ring.py  run.sh  symetric.py
