[package]
name = "membrane"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "symbols"
lto = true
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lockfree = "0.5.1"
clap = { version = "4.0.18", features = ["derive"] }
# plotly = { version = "0.8.1", features = ["kaleido"] }
